# HomeAssignments-spring-demo

./: .gitignore  CMakeLists.txt  README.md  astyle.ini
.github/workflows/: cmake-single-platform.yml
Assignment1/: CMakeLists.txt
Assignment1/include/: library.h
Assignment1/src/: library.cpp  main.cpp
Assignment1/test/: test1.cpp
